# extractor

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt  requirements.txt  setup.py
.github/workflows/: cmake-pr.yml  rel-pub.yml
buildutils/: build.py  fetch.py
docs/: Bars-Tutorial.md  BarsTutorial.md  Extractor-Python-API.md  ExtractorBarsTutorial.md  ExtractorIntroduction.md  ExtractorPythonAPI.md  ExtractorReference.md  Introduction.md  Ore-Protocol-1.0.0.md  Ore-Protocol-1.1.0.md  Ore-Protocol-1.1.1.md  Ore-Protocol-1.1.2.md  Ore1.0.0.md  Ore1.1.0.md  Ore1.1.1.md  Ore1.1.2.md  README.md  Typing-System.md  TypingSystem.md
include/: arg_stack.h  call_ctx.h  comp_def.h  comp_def.hpp  comp_def_simp.h  decimal64.h  decimal64.hpp  exec_ctx.h  perf_timer.h  query_ctx.h  rprice.hpp  serial.h  side.hpp  std_comp.h  time64.h  type_sys.h
include/extractor/: api.h  arg_stack.h  call_ctx.h  call_ctx_base.h  common.hpp  comp_def.h  comp_def.hpp  comp_def_simp.h  comp_sys.h  comp_sys_capture.h  cum_trade.hpp  decimal64.h  decimal64.hpp  exec_ctx.h  frame.h  frame.hpp  frame_base.h  handle.h  meson.build  module.h  perf_timer.h  py_extractor.h  py_side.h  query_ctx.h  rational64.h  rational64.hpp  rprice.hpp  serial.h  side.hpp  std_comp.h  stream_ctx.h  time64.h  time64.hpp  type_decl.h  type_sys.h
include/extractor/book/: book.h  ore.hpp  updates.hpp
include/extractor/python/: py_extractor.h
install/: meson.build
lib/: __init__.py  meson.build
lib/pkgconfig/: extractor.pc.in  py_extractor.pc.in
python/: CMakeLists.txt  custom.hpp  live_batch.hpp  live_poll.hpp  meson.build  pandas_play.hpp  py_comp.hpp  py_comp_base.hpp  py_comp_sys.hpp  py_context.h  py_decimal128.hpp  py_extractor.cpp  py_extractor_main.cpp  py_frame.hpp  py_graph.hpp  py_module.hpp  py_play.hpp  py_rational64.hpp  py_rprice.hpp  py_side.hpp  py_type_utils.hpp  py_types.hpp  py_utils.hpp  py_wrapper.hpp  setup.py  sim_poll.hpp  tuple_msg.hpp  tuple_split.hpp
python/book/: py_book.cpp  py_book.h  py_level.hpp
python/extractor/: __init__.py
python/extractor/tests/: arithmetic.py
python/include/extractor/python/: book.h  context.h  decimal.h  decimal128.h  decimal128.hpp  extractor.h  fxpt128.hpp  mpdecimal.h  py_api.h  py_side.h  pydecimal.h  rational64.h  rational64.hpp  rprice.h  rprice.hpp  side.h  side.hpp  system.hpp  type_utils.hpp
python/src/: comp.hpp  comp_base.hpp  custom.hpp  decimal.c  extractor.cpp  extractor_main.cpp  frame.hpp  graph.hpp  live_batch.hpp  live_poll.hpp  module.hpp  pandas_play.hpp  play.hpp  py_comp_sys.hpp  py_extractor.cpp  py_graph.hpp  py_play.hpp  pydecimal.c  side.hpp  sim_poll.hpp  sys_def.hpp  tuple_msg.hpp  tuple_split.hpp  types.hpp  utils.hpp  wrapper.hpp
python/src/book/: book.cpp  level.hpp  py_book.cpp  py_level.hpp
samples/: accumulate.base.csv  accumulator.cpp  meson.build  pandas_play_file.csv
scripts/: baml_recovery_tester.sh  baml_session_tester.sh  build_wheel.sh  build_wheel_wrap.sh  conda_gen.py  conda_pkg_gen.sh  doc.sh  ep_recovery_tester.sh  ep_session_tester.sh  gen_init.sh  meson.build  pkg_gen.ps1  pkg_gen.sh  racket_generate.sh  setup.sh  setup_runner.sh  style.sh  test-extractor-python  wheel_gen.py
src/: CMakeLists.txt  accumulate.cpp  accumulate.h  activated_timer.hpp  add.cpp  add.h  api.cpp  ar.hpp  arg_serial.cpp  arg_serial.h  arg_stack.cpp  average_tw.hpp  bbo_aggr.cpp  bbo_aggr.h  bbo_book_aggr.cpp  book_build.cpp  book_build.h  book_header.cpp  book_msg.cpp  book_msg.h  book_play_split.cpp  book_play_split.h  book_trades.cpp  book_trades.h  book_vendor_time.cpp  call_obj.cpp  call_obj.h  call_stack.cpp  call_stack.h  combine.cpp  combine.h  comp.cpp  comp.h  comp_base.h  comp_def.cpp  comp_def_simp.cpp  comp_graph.cpp  comp_graph.h  comp_sys.cpp  comp_sys.hpp  (+180 more)
src/book/: book.cpp  book.h  updates.cpp
subprojects/: asio.wrap  fmtron-lib.wrap
test/: CMakeLists.txt  FmEmaConfig.xml.in  accumulate.hpp  accumulate.py  add.py  announcements_book_build.py  api_test.py  arg_serial.cpp  arg_stack.cpp  average_tw.py  bars.py  book_bbo.py  book_bbo_multi_file.py  book_build.hpp  book_build.py  book_montage.py  book_montage128.py  book_msg.py  book_play_ext.c  book_play_split.py  book_stats.py  book_update.py  btec_bars.py  btec_bars128.py  call_stack.cpp  callbacks.py  coinbase.py  comp_graph.cpp  comp_sys.cpp  cond.hpp  constant.hpp  convert.py  count.py  counters_test.hpp  csv_mkt_data.py  csv_mkt_data_perf.py  csv_play.hpp  csv_play.py  csv_play_empty_fail.py  csv_play_empty_strings.py  (+119 more)
test/data/: add.base.csv  and_multiple_comps.base.csv  arithmetical_op_file_one.csv  arithmetical_op_file_two.csv  average_tw.base.csv  averages_input.csv  bar_20171018.base.csv  bar_20171018_proto_vwap.base.csv  bar_20171018_vwap.base.csv  bar_20171018_vwap_reverse.base.csv  book_bbo_bbos.base.txt  book_bbo_bbos_multi_file.base.txt  book_bbo_trades.base.txt  book_bbo_trades_multi_file.base.txt  book_bbo_trades_multi_file_partial.base.txt  capture_record_clbcks.base.mp  coinbase_book.base.csv  coinbase_book_comp.base.csv  coinbase_bulldozer.base.csv  coinbase_feed.txt.xz  coinbase_feed_comp.txt.xz  cond_single.base.csv  constant_multiple.base.csv  constant_single_float.base.csv  convert_float_one.base.csv  convert_float_two.base.csv  convert_single_two.base.csv  count.base.csv  csv_play_file.csv  csv_play_file_3.base.csv  csv_play_file_empty_fail.csv  csv_play_file_empty_strings.csv  csv_play_file_empty_strings_py.base.csv  csv_play_file_py.base.csv  csv_play_file_wrong.base.csv  decbar_20171018.base.csv  divide.base.csv  equal_multiple.base.csv  equal_single.base.csv  equal_string.base.csv  (+57 more)
tools/: bars.py  book_build.py  book_cross_validate.py  book_ete.py  bpipe_poll.py  capture_reader.py  fmtron.py  graph_dump.py  json2ore.py  kafka_play.py  kafka_poll.py  kafka_pub.py  live_book_build.py  meson.build  ore.avsc  ore_avro_test.py  ore_reader.py  ore_truncate.py  ore_yamal_play.py  ore_ytp_decode.py  ore_ytp_dump.py  ore_ytp_write.py  pg_play.py  pg_pub.py  synth_announcements_ore.py  synth_ore.py  yamal_ore_record.py
(+15 files in other folders)
