option('clients', type : 'array', choices : ['qsemble','exos','exoduspoint', 'schonfeld','trial'], yield : true)
option('py_version', type : 'string', value: 'python3.8', yield: true)
option('install_samples', type: 'boolean', value: true, yield: true)
option('extensions', type : 'array', choices : ['fmtron'], value : [], yield : true)
